--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ Radio: <br>
 </div-->
 
 <div class="well well-sm">
+<input type="text" ng-change="" ng-model="searchParam.pageNr">
 <input type="text" ng-change="" ng-model="searchParam.keywords">
 <button ng-click="search()">Search</button>
 </div>
